
syntax = "proto3";

package auth.v1;

import "google/protobuf/empty.proto";
import "google/api/annotations.proto";
import "auth/v1/basic.proto";

option go_package = "heytom-auth/api/auth/v1;v1";
option java_multiple_files = true;
option java_package = "dev.kratos.api.auth.v1";
option java_outer_classname = "AuthProtoV1";

// 应用服务
service Application {
  rpc PageList(PageApplicationRequest) returns (PageApplicationResponse) {
    option (google.api.http) = {
      get: "/application/list"
    };
  }
  rpc Get(GetApplicationRequest) returns (ApplicationInfo) {
    option (google.api.http) = {
      get: "/application/{id}"
    };
  }
  rpc Create(CreateApplicationRequest) returns (ApplicationInfo) {
    option (google.api.http) = {
      post: "/application"
      body: "*"
    };
  }
  rpc Update(UpdateApplicationRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      put: "/application/{id}"
      body: "*"
    };
  }
  rpc Delete(DeleteApplicationRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/application/{id}"
    };
  }
}

// 应用相关消息
message ApplicationInfo {
  int64 id = 1;
  string name = 2;
  string description = 3;
  string app_key = 4;
  string app_secret = 5;
  string callback_url = 6;
  int64 created_at = 7;
  int64 updated_at = 8;
}

message DeleteApplicationRequest {
  int64 id = 1;
}

message CreateApplicationRequest {
  string name = 1;
  string description = 2;
  string callback_url = 3;
}

message UpdateApplicationRequest {
  int64 id = 1;
  string name = 2;
  string description = 3;
  string callback_url = 4;
}

message GetApplicationRequest {
  int64 id = 1;
}

message PageApplicationRequest {
  PageRequest page = 1;
}

message PageApplicationResponse {
  int64 total = 1;
  repeated ApplicationInfo applications = 2;
}

